tests/snippets/valid_snippets/js_snippets_valid.snippet
<!
  (
    "log",
    title="Log Message",
    description="Logs a Message to the console",
    ```javascript console.log("Hello world)```
  )
  (
    "logerr",
    title="Log Error Message",
    description="Logs an Error Message to the console",
    ```javascript console.error("This is an Error")```
  )
  (
    "trycatch",
    title="Try-Catch Block",
    description="Creates a basic try catch block",
    ```javascript
    try {
        ${1:// code here}
    } catch (${2:error}) {
        console.error(${2:error});
    }
    ```
  )
>

