tests/snippets/invalid_snippets/malformed_brackets.snippet
<!
  (
    "log",
    title="Log Message",
    description="Logs a Message to the console",
    ```javascript console.log("Hello world")```
>

